--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,2 @@
-CDRLearn.xcodeproj/project.xcworkspace/xcuserdata/zhaoqianyu.xcuserdatad/UserInterfaceState.xcuserstate
+CDRLearn.xcodeproj/project.xcworkspace/xcuserdata
 CDRLearn/DR/.DS_Store
